deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: release-v1-0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-v1-0
  labels:
    app: flask-app-v1-0
  namespace: release-v1-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app-v1-0
  template:
    metadata:
      labels:
        app: flask-app-v1-0
    spec:
      containers:
        - name: flask-container-v1-0
          image: zynx01/flask-example02:v1.0-26
          ports:
            - containerPort: 5000
          resources:

---
apiVersion: v1
kind: Service
metadata:
  name: flask-service-v1-0
  namespace: release-v1-0
spec:
  selector:
    app: flask-app-v1-0
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
